2005-02-09  Jean-Louis Martineau <martineau@iro.umontreal.ca>

        * server-src/planner.c: Improve message if no incremental estimate.

2004-12-21  Jean-Louis Martineau <martineau@iro.umontreal.ca>
	Patch by Christopher Pascoe <c.pascoe@itee.uq.edu.au>

	* common-src/match.c (match_glob, match_tar): Don't amfree(regex)
	  before calling error().

2004-11-22  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/driver.c (startaflush): Use ALGO_SMALLEST if nothing fit.

2004-11-22  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/driver.c: Typo.

2004-11-19  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* restore-src/amrestore.c: Should now work correctly with empty file.
	* server-src/amverify.sh.in: Parse "End-of-Information detected."
	  message from amrestore.

2004-11-19  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/driver.c: tape_left should not become negative.

2004-11-19  Jean-Louis Martineau <martineau@iro.umontreal.ca>
	Patch by Orion Poplawski <orion@cora.nwra.com>

	* server-src/diskfile.c: Parse negative spindle (-1).

2004-11-19  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/amadmin.c: Balance subcommand use displayunit.
	* server-src/amcheck.c: Small cleanup.

2004-11-19  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* restore-src/amrestore.c: Undo patch from 2004-11-11, it break
	  the file: dirver.

2004-11-19  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/amstatus.pl.in: Remove trace.

2004-11-16  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/diskfile.c: Compilation fix.

2004-11-16  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/conffile.c: Parse displayunit,
	  new fonction getcont_unit_divisor().
	* server-src/conffile.h: Prototype of getcont_unit_divisor().
	* server-src/amcheck.c: Use displayunit to display holding disk size.
	* server-src/amstatus.pl.in: Use displayunit to display dump size.